2005-10-08  Nathaniel Smith  <njs@pobox.com>

	* revision.cc (calculate_change_sets_recursive):
	(find_subgraph_for_composite_search) 
	(calculate_composite_change_set, calculate_arbitrary_change_set):
	Remove.
	(construct_revision_from_ancestry): Likewise.

2005-10-08  Nathaniel Smith  <njs@pobox.com>

	* revision.cc (check_sane_history): Remove.

2005-08-31  Marcel van der Boom  <marcel@hsdev.com>

	* std_hooks.lua (execute_confirm): New function.
	(merge2_opendiff_cmd, merge3_opendiff_cmd): Add.

2005-08-31  Matthew Gregan  <kinetik@orcon.net.nz>

	* paths.cc (test_bookkeeping_path, test_system_path): Second
	attempt at compile fixes; this time the unit tests actually pass
	too.

2005-08-30  Matthew Gregan  <kinetik@orcon.net.nz>

	* paths.cc (test_bookkeeping_path, test_system_path): Shift object
	instantiation around a little to work around what seems to be a
	bug in the gcc 3.3 parser.
	* win32/inodeprint.cc (inodeprint_file): Update to use new path
	handling code.
	* win32/fs.cc (tilde_expand): Compile fix.

2005-08-30  Petr Baudis  <pasky@suse.cz>

	* std_hooks.lua: Simple support for merging using merge(1) and vim.

2005-08-30  Benoît Dejean  <benoit@placenet.org>

	* po/fr.po: Updated French translation.

2005-08-30  Benoît Dejean  <benoit@placenet.org>

	* commands.cc: Merged some error messages.

2005-08-30  Benoît Dejean  <benoit@placenet.org>

	* commands.cc: Merged complete(..., file_id) and
	complete(..., manifest_id) into template complete(..., ID).

2005-08-30  Benoît Dejean  <benoit@placenet.org>

	* commands.cc (ls_certs): Reworked for i18n.
	(CMD(commit)): Merged 2 strings.

2005-08-30  Matthew Gregan  <kinetik@orcon.net.nz>

	* revision.cc (ensure_parents_loaded): Don't reuse an iterator
	after we've invalidated it.  Fixes 'diff' crash reported by Howard
	Spindel.

2005-08-30  Matt Johnston  <matt@ucc.asn.au>

	* botan/allocate.cpp: avoid string comparison when looking up the 
	default allocator